# aoc2022

./: Cargo.toml  README.md  bacon.toml  build.rs  create
src/: lib.rs  main.rs  util.rs
src/day01/: input.rs  mod.rs
src/day01/input/: mod.rs
src/day02/: input.rs  mod.rs
src/day02/input/: mod.rs
src/day03/: input.rs  mod.rs
src/day04/: input.rs  mod.rs
src/day05/: input.rs  mod.rs
src/day06/: input.rs  mod.rs
src/day07/: input.rs  mod.rs
src/day08/: input.rs  mod.rs
src/day09/: input.rs  mod.rs
