[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
criterion = "0.4.0"
itertools = "0.10.5"
tap = "1.0.1"
phf = { version = "0.11.1", default-features = false }
strum = { version = "0.24.1", features = ["derive"] }

[build-dependencies]
phf_codegen = "0.11.1"
